Theme PF Susy3 : Mixin, correction du pb des liens inopérants avec BG en before.Ajout d'un z-index.

--- a/sass/global/_mixins-custom.scss
+++ b/sass/global/_mixins-custom.scss
@@ -85,6 +85,7 @@ $imagedir:'../images/'; // definir ici le chemin vers le dossier image
              height: 100%;
              display: block;
              background-size: $bgsize;
+             z-index: -10;//Sinon liens inopérants
          }   
     }
 @mixin backgroundRGBA($color, $opacity){
